feat: added patents and trademark search with details page both frontend and backend