@@ -1,8 +1,11 @@
 package com.teamb.globalipbackend1.service.search;
 
+import com.teamb.globalipbackend1.dto.search.PatentSearchFilter;
 import com.teamb.globalipbackend1.external.epo.EpoClient;
+import com.teamb.globalipbackend1.external.epo.dto.EpoCpcClassification;
 import com.teamb.globalipbackend1.external.epo.dto.EpoDocumentId;
 import com.teamb.globalipbackend1.external.epo.dto.EpoExchangeDocument;
+import com.teamb.globalipbackend1.external.epo.dto.EpoIpcClassification;
 import com.teamb.globalipbackend1.external.epo.mapper.EpoPatentMapper;
 import com.teamb.globalipbackend1.model.patents.PatentDocument;
 import lombok.RequiredArgsConstructor;
@@ -23,14 +26,11 @@ public class EPOPatentSearchService {
 
     private final EpoClient epoClient;
     private final EpoPatentMapper epoPatentMapper;
+    private final PatentFilterService patentFilterService;
 
-    /**
-     * Search patents by keyword - returns raw results without filtering
-     */
     public List<PatentDocument> searchPatents(String keyword) {
-        log.info("Starting EPO patent search for keyword: {}", keyword);
+        log.info("Starting EPO patent searchByKeyword for keyword: {}", keyword);
 
-        // Step 1: Get document IDs from search
         List<EpoDocumentId> ids = searchByKeyword(keyword);
 
         if (ids.isEmpty()) {
@@ -38,36 +38,31 @@ public class EPOPatentSearchService {
             return List.of();
         }
 
-        log.info("Found {} document IDs from EPO search", ids.size());
+        log.info("Found {} document IDs from EPO searchByKeyword", ids.size());
 
-        // Step 2: Fetch full bibliographic data for each ID
         List<PatentDocument> results = fetchPatentDetails(ids);
 
-        log.info("EPO search completed. Total patents fetched: {}", results.size());
-
+        log.info("EPO searchByKeyword completed. Total patents fetched: {}", results.size());
         return results;
     }
 
-    /**
-     * Search EPO by keyword and return document IDs
-     */
     private List<EpoDocumentId> searchByKeyword(String keyword) {
         try {
             return epoClient.searchByTitle(keyword);
         } catch (Exception e) {
-            log.error("EPO search failed for keyword: {}", keyword, e);
-            throw new RuntimeException("EPO search failed: " + e.getMessage(), e);
+            log.error("EPO searchByKeyword failed for keyword: {}", keyword, e);
+            throw new RuntimeException("EPO searchByKeyword failed", e);
         }
     }
 
-    /**
-     * Fetch detailed patent information for each document ID
-     */
     private List<PatentDocument> fetchPatentDetails(List<EpoDocumentId> ids) {
+
         List<PatentDocument> results = new ArrayList<>();
 
         for (EpoDocumentId id : ids) {
+
             try {
+
                 List<EpoExchangeDocument> documents = epoClient.fetchBiblio(id);
 
                 if (documents.isEmpty()) {
@@ -76,27 +71,85 @@ public class EPOPatentSearchService {
                     continue;
                 }
 
-                // Take the first document (already prioritized by kind in EpoClient)
-                EpoExchangeDocument doc = documents.get(0);
-                PatentDocument mapped = epoPatentMapper.map(doc);
+                EpoExchangeDocument doc = documents.getFirst();
 
-                if (mapped != null) {
-                    results.add(mapped);
-                    log.debug("Successfully mapped patent: {}", mapped.getPublicationNumber());
-                } else {
+                PatentDocument patent = epoPatentMapper.map(doc);
+                if (patent == null) {
                     log.warn("Mapper returned null for {}{}{}",
                             id.getCountry(), id.getDocNumber(), id.getKind());
+                    continue;
                 }
 
+
+                enrichWithAbstract(patent, id);
+
+
+                enrichWithClassifications(patent, doc);
+
+                results.add(patent);
+
             } catch (Exception ex) {
-                log.warn("Failed to fetch/map document {}{}{}: {}",
+                log.warn("Failed to fetch/map patent {}{}{}",
                         id.getCountry(),
                         id.getDocNumber(),
                         id.getKind(),
-                        ex.getMessage());
+                        ex);
             }
         }
 
         return results;
     }
+
+    private void enrichWithAbstract(PatentDocument patent, EpoDocumentId id) {
+        try {
+            var abstracts = epoClient.fetchAbstract(id);
+
+            abstracts.stream()
+                    .filter(a -> "en".equalsIgnoreCase(a.getLang()))
+                    .findFirst()
+                    .ifPresent(a -> patent.setAbstractText(a.getValue()));
+
+        } catch (Exception e) {
+            log.debug("Abstract not available for {}", patent.getPublicationNumber());
+        }
+    }
+
+    private void enrichWithClassifications(
+            PatentDocument patent,
+            EpoExchangeDocument doc
+    ) {
+        if (doc.getBibliographicData() == null) return;
+
+        var biblio = doc.getBibliographicData();
+
+
+        List<String> ipcCodes = biblio.getIpcList().stream()
+                .map(EpoIpcClassification::getFullClassificationCode)
+                .filter(code -> code != null && !code.isBlank())
+                .distinct()
+                .toList();
+        patent.setIpcClasses(ipcCodes);
+
+        List<String> cpcCodes = biblio.getCpcList().stream()
+                .map(EpoCpcClassification::getFullClassificationCode)
+                .filter(code -> code != null && !code.isBlank())
+                .distinct()
+                .toList();
+        patent.setCpcClasses(cpcCodes);
+    }
+
+    public List<PatentDocument> searchAdvanced(PatentSearchFilter filter) {
+
+        List<EpoDocumentId> ids = epoClient.advancedSearch(filter);
+
+        List<PatentDocument> docs = fetchPatentDetails(ids);
+
+
+        return docs.stream()
+                .filter(p -> patentFilterService.matchesAssignee(p, filter))
+                .filter(p -> patentFilterService.matchesInventor(p, filter))
+                .toList();
+    }
+
+
 }
